minor fixes to align the hamburger and logo

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -11,10 +11,14 @@
         display: flex;
         align-items: end;
         justify-content: center;
+
+        position: fixed;
+        top: 2.4rem;
+        left: 2rem;
     }
 
     &__logo-image{
-        width: 8rem;
+        width: 7rem;
     }
 
     &__navigation{
@@ -185,24 +189,26 @@
 
     &__main-heading{
         font-size: 2.4rem;
-        padding: .4rem .7rem 0;
+        padding: .4rem 2rem 0;
     }
 
     &__text-content{
         text-align: left;
-        padding: 1rem .8rem 1.8rem;
+        padding: 1rem 2rem 1.8rem;
         font-size: 1.5rem;
     }
 
     &__cta{
-        padding: 1rem 4rem;
+        padding: 1rem 2.8rem;
         font-size: 1.3rem;
+        width: 90%;
+        text-align: center;
     }
 
 }
 
 .sm-links{
-    padding: 1rem 0;
+    padding: 1rem;
 
     position: relative;
 
@@ -257,7 +263,7 @@
         font-weight: 400;
         text-align: left;
         font-size: 2rem;
-        padding: 0 0 0 1.2rem;
+        padding: 0 2rem;
     }
 
     &__list{
@@ -265,7 +271,7 @@
         grid-template-rows: repeat(2, min-content);
         grid-template-columns: repeat(2, min-content);
         place-items: center;
-        margin-top: 1rem;
+        padding: 2rem;
     }
 
     &__items{
@@ -280,7 +286,7 @@
     }
     
     &__image {
-        width: 8rem;
+        width: 7rem;
     }
 
     &__item {
